feat(user): Add register and autentification user
